--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background: linear-gradient(to bottom, #1A1E4D 0%, #000321 40%);
+  background: linear-gradient(to bottom, #8F0007 0%, #080101 40%);
   color: #fffcde; /* Optional: if you want the default text color to be #fffcde */
 }
 
